front: fix text wrapping in speed space chart settings
Add `white-space: nowrap` to prevent the text from spilling on
multiple lines. Drop the `position: absolute` on the button to
toggle settings, it's better to just rely on flexbox instead
and avoid hardcoding a margin-left on the the settings form.

While at it, slightly reduce the font size for the checkbox
labels (purely cosmetic and subjective change).

Closes: https://github.com/OpenRailAssociation/osrd/issues/7589

--- a/front/src/modules/simulationResult/styles/_speedSpaceChart.scss
+++ b/front/src/modules/simulationResult/styles/_speedSpaceChart.scss
@@ -5,7 +5,6 @@
   position: relative;
 
   .showSettingsButton {
-    position: absolute;
     border: none;
     background: none;
     cursor: pointer;
@@ -16,6 +15,7 @@
   .showSettings {
     overflow: hidden;
     transition: 0.3s;
+    white-space: nowrap;
   }
 
   .btn-rotate {
